--- a/src/main/resources/templates/items/createItemForm.html
+++ b/src/main/resources/templates/items/createItemForm.html
@@ -19,14 +19,15 @@
     <div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
     <!--<form th:action="@{/items/new}" th:object="${form}" method="post" onsubmit="changeAction(event)">-->
     <form th:action="@{/items/new}" th:object="${itemForm}" method="post">
-        <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{itemId}"/>
         <!--checkPoint_현재는 하드코딩으로 Book. 나중에 selectBox 만들고 값 할당 필요-->
         <input type="hidden" name="dtype" value="BOOK"/>
 
         <div class="form-group">
             <label th:for="name">상품명</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="상품명을 입력하세요"
-                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
+                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'"
+                   th:readonly="${itemForm.itemId != null}"/>
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect data</p>
         </div>
         <div class="form-group">
@@ -45,7 +46,12 @@
             <label th:for="isbn">ISBN</label>
             <input type="text" th:field="*{isbn}" class="form-control" placeholder="ISBN을 입력하세요">
         </div>
-        <button type="submit" class="btn btn-primary">상품 등록</button>
+        <th:block th:if="${itemForm.itemId != null}">
+            <button type="submit" class="btn btn-primary">상품 수정</button>
+        </th:block>
+        <th:block th:if="${itemForm.itemId == null}">
+            <button type="submit" class="btn btn-primary">상품 등록</button>
+        </th:block>
     </form>
     <br/>
     <div th:replace="~{fragments/footer :: footer}" />
