--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -17,7 +17,7 @@
             </thead>
             <tbody>
             <tr th:each="member : ${members}">
-                <td th:text="${member.id}"></td>
+                <td th:text="${member.memberId}"></td>
                 <td th:text="${member.name}"></td>
                 <td th:text="${member.address?.city}"></td> <!--address가 null 이면 출력 안함-->
                 <td th:text="${member.address?.street}"></td>
