--- a/src/main/resources/templates/home_mobile.html
+++ b/src/main/resources/templates/home_mobile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Hello Shop</title>
+    <title>SPRING Shop</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -263,7 +263,7 @@
     <!-- Header -->
     <div class="header">
         <div class="logo">
-            <span>뜌뜌</span><span> </span><span>빡스</span>
+            <span>SPRING</span><span> </span><span>SHOP</span>
         </div>
         <div class="menu-buttons">
             <!-- User Menu -->
@@ -459,6 +459,5 @@
             }
         }
     </script>
-
 </body>
 </html>
