--- a/src/main/resources/templates/items/createItemForm.html
+++ b/src/main/resources/templates/items/createItemForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}" />
-<style>
+<style>itemForm
     .fieldError {
         border-color: #bd2130;
     }
